# compilers

./: .gitignore  cargo.toml  test.zsh
common/: Cargo.toml
common/src/: lib.rs  mapped_file.rs  source_file.rs  span.rs
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs  span.rs  tokens.rs
niamc/: Cargo.toml
niamc/src/: arguments.rs  files.rs  lexer.rs  main.rs  mapped_file.rs  parser.rs  preprocess.rs
parser/: Cargo.toml
parser/src/: ast.rs  errors.rs  lib.rs  parser.rs  token_collection.rs  utilities.rs
preprocessor/: Cargo.toml
preprocessor/src/: config.rs  process.rs
