[package]
name = "niamc"
version = "0.1.0"
edition = "2024"

[dependencies]
lexer = { path = "../lexer" }
common = { path = "../common" }
parser = { path = "../parser" }
codespan-reporting = "0.13.1"
ariadne = { version = "0.6.0", features = ["auto-color"] }

[dependencies.clap]
version = "4.5.49"
default-features = true
features = [ "derive" ]
